# ChatgptForumDjango

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: build.yaml
django_server/: admin.py  models.py  serializers.py  settings.py  urls.py  wsgi.py
django_server/ai/: Completions.py  PromptEligibility.py  PromptInitiator.py
django_server/authentication_classes/: GoogleAuthBackend.py  auth0authorization.py  permissions.py
django_server/filters/: score.py
django_server/forum/: asgi.py
django_server/forum/subviews/: auth.py
django_server/middlewares/: JWTAuthenticationMiddleware.py
django_server/migrations/: 0001_initial.py  0001_squashed_0017_tag_post_tags.py  0001_squashed_0017_tag_post_tags_squashed_0024_alter_user_managers_rename_email_user_username.py  0002_remove_post_tags.py  0002_remove_post_tags_squashed_0005_tag_post_tags.py  0002_user_groups_user_is_superuser_user_user_permissions.py  0003_alter_user_managers_user_is_staff_and_more_squashed_0005_alter_user_managers.py  0003_post_tags.py  0004_tag2_remove_post_tags_delete_tag.py  0005_tag_post_tags.py  0006_alter_comment_author.py  0007_alter_comment_text.py  0008_comment_is_prompt.py  0009_postscore_commentscore.py  0010_alter_commentscore_unique_together_and_more.py  0011_alter_commentscore_user.py  0012_alter_postscore_user.py  0013_alter_comment_text.py  0014_alter_user_name.py  0015_post_chat_role_alter_user_name.py  0016_rename_post_id_comment_post.py  0017_tag_post_tags.py  0018_alter_tag_name.py  0019_comment_parent_comment.py  0020_remove_comment_parent_comment_comment_parent.py  0021_post_prompt_mode.py  0022_remove_user_google_id.py  0022_user_groups.py  0023_alter_post_tags.py  0024_alter_user_managers_rename_email_user_username.py  0025_alter_user_managers.py  0026_user_email.py
django_server/paginators/: default.py
django_server/subserializers/: auth.py  comments.py  posts.py  score.py  tags.py  user.py
django_server/subserializers/mixins/: selected_fields.py
django_server/subviews/: auth.py  base.py  comments.py  posts.py  score.py  threads.py  user.py
django_server/subviews/mixins/: count.py
forum/: settings.py  wsgi.py
forum/forum/: asgi.py  models.py  settings.py  views.py
forum/forum/migrations/: 0001_initial.py
forum/forum/subviews/: auth.py
infrastructure/: add_env_variables_to_task_definitions.py  add_secret_env_variables_to_task_definitions.py  cloud_local_settings.py  network-configuration.json  task-definition.json
static/: staticfiles.json
